--- a/index.css
+++ b/index.css
@@ -1,5 +1,14 @@
+body {
+    max-width: 970px;
+    margin: 0 auto;
+    font-family: 'Fredoka One', cursive;
+}
+.heading {
+    font-size: 70px;
+    text-align:center;
+}
 .topnav {
-    background-color: #939e91;
+    background-color: #171819;
     overflow: hidden;
 }
 .topnav a {
@@ -16,102 +25,105 @@
     background-color: #ddd;
     color: black;
 }
-.topnav a.active {
+.topnav active {
     background-color: #4CAF50;
     color: white;
 }
 
-.hhome {
-    font-family: 'Impact', sans-serif;
-    text-align:  center;
-    font-size: 5rem;
-}
-#YuriiPuzikov {
-    position: absolute;
-    left: 150px;
-}
-
-.exp {
-    font-family: 'Impact', sans-serif;
-    position: relative;
-    left: 600px;
-    top: 50px;
-    font-size: 2rem;
-}
-
-#skillsh {
-    position: relative;
-    top: 120px;
-    font-family: 'Impact', sans-serif;
-    text-align:  center;
-    font-size: 5rem;
-}
-#highskills {
-    margin-left: 100px;
-    margin-top: 100px;
-}
-
-#highskills img {
-    position: relative;
-    text-align: center;
-    top: 70px;
-    margin-left: 100px;
-}
-
-
-#downskills {
-    margin-left: 100px;
-    margin-top: 200px;
-}
-
-#downskills img {
-    position: relative;
-    text-align: center;
-    top: 70px;
-    margin-left: 120px;
-}
-
-.skilltext p {
-    position: relative;
-    text-align: center;
-    top: 70px;
-    margin-left: 210px;
-    font-family: 'Impact', sans-serif;
-    font-size:1.9rem;
-}
-
-#col1 {
-    float:left;
-    width: 80px;
+#headerimg {
+    display: block;
+    width: 970px;
     
 }
-#col2 {
-    float:left;
-    width: 200px;
+#home {
+    display: block;
+    width: 970px;
+    background-color: rgb(236,189,49);
+    background-position: center bottom, left top;
+    background-repeat: repeat-x;
+    overflow: hidden;
+    
 }
-#col3 {
+.about {
     float:left;
-    width: 80px;
+    margin-left: 20px;
+    width: 500px;
+    margin-bottom: 30px;
 }
-#col4 {
+.about h1 {
+    font-weight: 900;
+    color: #FFF;
+    line-height: 34px;
+    margin-top: 8px;
+    margin-bottom: 0; 
+    padding-bottom: 0;
+}
+.about h3 {
+    font-size: 18px;
+    color: #FFF;
+    line-height: 18px;
+}
+.photo-inner {
+    margin-right:20px;
     float:left;
-    width: 150px;
+    padding: 12px 0 0 20px;
+
+}
+.photo-inner img {
+    height:186px; 
+    width:153px; 
+}
+.personal-info {
+    float:left;
+    margin-left: 10px;
+}
+#personal-info1 {
+    float:left;
+    list-style-type: none;
+}
+#personal-info1 li {
+    padding: 4px 7px;
+    border-radius: 3px;
 }
 
-.hfooter {
-    position: relative;
-    top: 120px;
-    font-family: 'Impact', sans-serif;
-    text-align:  center;
-    font-size: 5rem;
+#personal-info2 {
+    float:left;
+    list-style-type: none;
+    font-family: 'Fredoka One';
+}
+#personal-info2 li {
+    padding: 4px 7px;
+    border-radius: 3px;
+    width: 170px;
 }
 
+main {
+    display:block;
+}
+
+#topskills img {
+ height:230px;
+ width:180px;
+ margin: 25px;
+}
+.photofeedback {
+    float:left;
+}
+#feedback p:first-of-type {
+    font-family: 'Architects Daughter', cursive;
+    text-align:center;
+}
+#fromVsevolod {
+    float:right;
+}
+footer {
+    display:block;
+}
 .form {
     top:100px;
     position: relative;
     text-align: center;
     border-radius: 5px;
-    background-color: #f2f2f2;
     padding: 20px;
 }
 
@@ -159,15 +171,10 @@ input[type=submit]:hover {
 }
 
 #links {
-    margin-left: 100px;
-    margin-top: 100px;
+    display: block;
+    float:right;
 }
-
 #links img {
-    position: relative;
-    text-align: center;
-    top: 70px;
-    margin-left: 125px;
+    height:50px;
+    width:50px;
 }
-
-
